[gd_scene load_steps=2 format=3 uid="uid://5gar6641oomu"]

[ext_resource type="Script" uid="uid://dq1emsxemawj4" path="res://script/hud.gd" id="1_qpvh6"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qpvh6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Vida: 100"

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Pontos: 0"

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Tempo: 60"
